# dataset-generator

./: CMakeLists.txt  README.md  generate.py  main.cpp  run.sh  save_combined_image.py  ТребованияКАннотациям.docx
QR-Noize/: .gitignore  CMakeLists.txt  ImageGen.cpp  README.md  build.sh  generate.config  noize.config  requirements.txt  run.sh
QR-Noize/Distortions/: CMakeLists.txt  Distortions.hpp  README.md
QR-Noize/Generate/: generate.py
QR-Noize/Validate/: validate.py
QR-Noize/test_mod/: validation.json
data/: 4bR9_IMG_20231202_025701_311.json
